--- a/index.html
+++ b/index.html
@@ -7,40 +7,37 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
-<body class="font-sans text-gray-800">
+<body class="font-sans text-gray-900">
 
-  <!-- Hero Section -->
-  <section id="home" class="min-h-screen flex flex-col md:flex-row items-center justify-center bg-gradient-to-r from-indigo-600 to-purple-600 text-white px-6 md:px-20">
-    <div class="flex-1 text-center md:text-left">
+  <!-- Hero -->
+  <section id="home" class="min-h-screen flex flex-col justify-center items-center bg-gradient-to-r from-indigo-600 to-purple-600 text-white px-6">
+    <div class="max-w-3xl mx-auto text-center">
       <h1 class="text-4xl md:text-6xl font-bold mb-4">Welcome to YourBrand</h1>
       <p class="text-lg md:text-xl mb-6">Building modern solutions for a digital future.</p>
       <a href="#features" class="bg-white text-indigo-600 font-semibold px-6 py-3 rounded-full shadow hover:bg-gray-100 transition">
         Get Started
       </a>
     </div>
-    <div class="flex-1 mt-10 md:mt-0 flex justify-center">
-      <img src="https://via.placeholder.com/400x300" alt="Hero Image" class="rounded-2xl shadow-lg">
-    </div>
   </section>
 
-  <!-- Features Section -->
-  <section id="features" class="py-20 bg-gray-50 px-6 md:px-20">
-    <div class="max-w-7xl mx-auto text-center">
+  <!-- Features -->
+  <section id="features" class="py-20 bg-gray-50 px-6">
+    <div class="max-w-5xl mx-auto text-center">
       <h2 class="text-3xl font-bold text-gray-800 mb-4">Our Features</h2>
       <p class="text-gray-600 mb-12">Discover what makes us unique</p>
 
       <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-        <div class="bg-white p-6 rounded-2xl shadow hover:shadow-lg transition text-center">
+        <div class="bg-white p-6 rounded-2xl shadow hover:shadow-lg transition flex flex-col items-center text-center">
           <i class="fas fa-bolt text-4xl text-indigo-600 mb-4"></i>
           <h3 class="font-semibold text-lg">Fast Performance</h3>
           <p class="text-gray-500 text-sm">Optimized for speed on any device.</p>
         </div>
-        <div class="bg-white p-6 rounded-2xl shadow hover:shadow-lg transition text-center">
+        <div class="bg-white p-6 rounded-2xl shadow hover:shadow-lg transition flex flex-col items-center text-center">
           <i class="fas fa-shield-alt text-4xl text-indigo-600 mb-4"></i>
           <h3 class="font-semibold text-lg">Secure</h3>
           <p class="text-gray-500 text-sm">Top-level security for your data.</p>
         </div>
-        <div class="bg-white p-6 rounded-2xl shadow hover:shadow-lg transition text-center">
+        <div class="bg-white p-6 rounded-2xl shadow hover:shadow-lg transition flex flex-col items-center text-center">
           <i class="fas fa-mobile-alt text-4xl text-indigo-600 mb-4"></i>
           <h3 class="font-semibold text-lg">Mobile Ready</h3>
           <p class="text-gray-500 text-sm">Looks great on all screen sizes.</p>
@@ -49,35 +46,28 @@
     </div>
   </section>
 
-  <!-- About Section -->
-  <section id="about" class="py-20 px-6 md:px-20">
-    <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-12 items-center">
-      <div>
-        <h2 class="text-3xl font-bold mb-4">About Us</h2>
-        <p class="text-gray-600 mb-6">
-          YourBrand is committed to delivering the best digital experiences. 
-          We focus on innovation, security, and user-centered design.
-        </p>
-        <a href="#contact" class="bg-indigo-600 text-white px-6 py-3 rounded-full shadow hover:bg-indigo-700 transition">
-          Contact Us
-        </a>
-      </div>
-      <div class="flex justify-center">
-        <img src="https://via.placeholder.com/400x300" alt="About Image" class="rounded-2xl shadow-lg">
-      </div>
+  <!-- About -->
+  <section id="about" class="py-20 px-6">
+    <div class="max-w-4xl mx-auto text-center">
+      <h2 class="text-3xl font-bold text-gray-800 mb-4">About Us</h2>
+      <p class="text-gray-600 mb-6">
+        At YourBrand, we are passionate about delivering high-quality solutions tailored to your needs. 
+        Our team focuses on innovation, security, and user-friendly design.
+      </p>
+      <img src="https://via.placeholder.com/600x300" alt="About Image" class="mx-auto rounded-2xl shadow-md">
     </div>
   </section>
 
-  <!-- Contact Section -->
-  <section id="contact" class="py-20 bg-gray-50 px-6 md:px-20">
+  <!-- Contact -->
+  <section id="contact" class="py-20 bg-gray-50 px-6">
     <div class="max-w-3xl mx-auto text-center">
-      <h2 class="text-3xl font-bold mb-4">Get in Touch</h2>
-      <p class="text-gray-600 mb-8">We would love to hear from you. Send us a message!</p>
+      <h2 class="text-3xl font-bold text-gray-800 mb-4">Contact Us</h2>
+      <p class="text-gray-600 mb-8">Have questions? Get in touch with us.</p>
       <form class="space-y-4">
-        <input type="text" placeholder="Your Name" class="w-full p-4 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-indigo-500">
-        <input type="email" placeholder="Your Email" class="w-full p-4 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-indigo-500">
-        <textarea placeholder="Your Message" rows="5" class="w-full p-4 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-indigo-500"></textarea>
-        <button type="submit" class="bg-indigo-600 text-white px-6 py-3 rounded-full shadow hover:bg-indigo-700 transition">
+        <input type="text" placeholder="Your Name" class="w-full px-4 py-3 rounded-lg border focus:outline-none focus:ring-2 focus:ring-indigo-500" required>
+        <input type="email" placeholder="Your Email" class="w-full px-4 py-3 rounded-lg border focus:outline-none focus:ring-2 focus:ring-indigo-500" required>
+        <textarea placeholder="Your Message" rows="4" class="w-full px-4 py-3 rounded-lg border focus:outline-none focus:ring-2 focus:ring-indigo-500"></textarea>
+        <button type="submit" class="bg-indigo-600 text-white font-semibold px-6 py-3 rounded-lg shadow hover:bg-indigo-700 transition w-full">
           Send Message
         </button>
       </form>
@@ -85,61 +75,43 @@
   </section>
 
   <!-- Footer -->
-  <footer class="bg-gray-900 text-gray-300 py-12 px-6 md:px-20">
-    <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-4 gap-10 text-center md:text-left">
-
+  <footer class="bg-gray-900 text-gray-400 py-10 px-6">
+    <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-4 gap-10 text-center md:text-left">
       <!-- Brand -->
       <div>
-        <h2 class="text-2xl font-bold text-white mb-4">YourBrand</h2>
-        <p class="text-gray-400">Building modern solutions for a digital future. Stay connected with us and grow together.</p>
+        <h3 class="text-white font-bold text-lg mb-4">YourBrand</h3>
+        <p class="text-gray-400 text-sm">Innovating the future, today.</p>
       </div>
-
       <!-- Navigation -->
       <div>
-        <h3 class="text-lg font-semibold text-white mb-4">Navigation</h3>
+        <h4 class="text-white font-semibold mb-4">Navigation</h4>
         <ul class="space-y-2">
-          <li><a href="#home" class="hover:text-white transition">Home</a></li>
-          <li><a href="#features" class="hover:text-white transition">Features</a></li>
-          <li><a href="#about" class="hover:text-white transition">About</a></li>
-          <li><a href="#contact" class="hover:text-white transition">Contact</a></li>
+          <li><a href="#home" class="hover:text-white">Home</a></li>
+          <li><a href="#features" class="hover:text-white">Features</a></li>
+          <li><a href="#about" class="hover:text-white">About</a></li>
+          <li><a href="#contact" class="hover:text-white">Contact</a></li>
         </ul>
       </div>
-
       <!-- Contact -->
       <div>
-        <h3 class="text-lg font-semibold text-white mb-4">Contact</h3>
+        <h4 class="text-white font-semibold mb-4">Contact</h4>
         <ul class="space-y-2">
-          <li><span>Email:</span> support@yourbrand.com</li>
-          <li><span>Phone:</span> +1 234 567 890</li>
-          <li><span>Address:</span> 123 Main St, City, Country</li>
+          <li>Email: info@yourbrand.com</li>
+          <li>Phone: +123 456 789</li>
+          <li>Address: City, Country</li>
         </ul>
       </div>
-
-      <!-- Follow Us -->
-      <div class="text-center md:text-left">
-        <h3 class="text-lg font-semibold text-white mb-4">Follow Us</h3>
-        <div class="flex justify-center md:justify-start space-x-3 text-xl">
-          <a href="https://facebook.com" target="_blank" class="w-10 h-10 flex items-center justify-center rounded-full bg-blue-600 text-white hover:opacity-80 transition">
-            <i class="fab fa-facebook-f"></i>
-          </a>
-          <a href="https://twitter.com" target="_blank" class="w-10 h-10 flex items-center justify-center rounded-full bg-sky-400 text-white hover:opacity-80 transition">
-            <i class="fab fa-twitter"></i>
-          </a>
-          <a href="https://instagram.com" target="_blank" class="w-10 h-10 flex items-center justify-center rounded-full bg-pink-500 text-white hover:opacity-80 transition">
-            <i class="fab fa-instagram"></i>
-          </a>
-          <a href="https://linkedin.com" target="_blank" class="w-10 h-10 flex items-center justify-center rounded-full bg-blue-700 text-white hover:opacity-80 transition">
-            <i class="fab fa-linkedin-in"></i>
-          </a>
-          <a href="https://github.com" target="_blank" class="w-10 h-10 flex items-center justify-center rounded-full bg-gray-800 text-white hover:opacity-80 transition">
-            <i class="fab fa-github"></i>
-          </a>
+      <!-- Socials -->
+      <div>
+        <h4 class="text-white font-semibold mb-4">Follow Us</h4>
+        <div class="flex justify-center md:justify-start space-x-4">
+          <a href="#" class="text-gray-400 hover:text-white text-xl"><i class="fab fa-facebook"></i></a>
+          <a href="#" class="text-gray-400 hover:text-white text-xl"><i class="fab fa-twitter"></i></a>
+          <a href="#" class="text-gray-400 hover:text-white text-xl"><i class="fab fa-instagram"></i></a>
+          <a href="#" class="text-gray-400 hover:text-white text-xl"><i class="fab fa-linkedin"></i></a>
         </div>
       </div>
-
     </div>
-
-    <!-- Copyright -->
     <div class="mt-10 text-center text-gray-500 text-sm">
       © 2025 YourBrand. All rights reserved.
     </div>
