--- a/index.html
+++ b/index.html
@@ -3,17 +3,28 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>YourBrand - Landing Page</title>
+  <title>DSRT - Digital Smart Revise Technology</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <style>
+    body { margin: 0; }
+    canvas#bgCanvas {
+      position: absolute;
+      inset: 0;
+      z-index: 0;
+    }
+  </style>
 </head>
-<body class="font-sans text-gray-900">
+<body class="font-sans text-gray-900 relative overflow-hidden">
+
+  <!-- Background Canvas -->
+  <canvas id="bgCanvas"></canvas>
 
   <!-- Hero -->
-  <section id="home" class="min-h-screen flex flex-col justify-center items-center bg-gradient-to-r from-indigo-600 to-purple-600 text-white px-6">
+  <section id="home" class="relative z-10 min-h-screen flex flex-col justify-center items-center bg-gradient-to-r from-indigo-600 to-purple-600 text-white px-6">
     <div class="max-w-3xl mx-auto text-center">
-      <h1 class="text-4xl md:text-6xl font-bold mb-4">Welcome to YourBrand</h1>
-      <p class="text-lg md:text-xl mb-6">Building modern solutions for a digital future.</p>
+      <h1 class="text-4xl md:text-6xl font-bold mb-2">DSRT</h1>
+      <p class="text-lg md:text-xl mb-6">Digital Smart Revise Technology</p>
       <a href="#features" class="bg-white text-indigo-600 font-semibold px-6 py-3 rounded-full shadow hover:bg-gray-100 transition">
         Get Started
       </a>
@@ -21,10 +32,10 @@
   </section>
 
   <!-- Features -->
-  <section id="features" class="py-20 bg-gray-50 px-6">
+  <section id="features" class="relative z-10 py-20 bg-gray-50 px-6">
     <div class="max-w-5xl mx-auto text-center">
       <h2 class="text-3xl font-bold text-gray-800 mb-4">Our Features</h2>
-      <p class="text-gray-600 mb-12">Discover what makes us unique</p>
+      <p class="text-gray-600 mb-12">Discover what makes DSRT unique</p>
 
       <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
         <div class="bg-white p-6 rounded-2xl shadow hover:shadow-lg transition flex flex-col items-center text-center">
@@ -47,21 +58,22 @@
   </section>
 
   <!-- About -->
-  <section id="about" class="py-20 px-6">
+  <section id="about" class="relative z-10 py-20 px-6">
     <div class="max-w-4xl mx-auto text-center">
-      <h2 class="text-3xl font-bold text-gray-800 mb-4">About Us</h2>
+      <h2 class="text-3xl font-bold text-gray-800 mb-4">About DSRT</h2>
       <p class="text-gray-600 mb-6">
-        At YourBrand, we are passionate about delivering high-quality solutions tailored to your needs. 
-        Our team focuses on innovation, security, and user-friendly design.
+        DSRT (Digital Smart Revise Technology) is dedicated to delivering high-quality solutions 
+        tailored to your needs. We focus on innovation, security, and user-friendly design to help 
+        you succeed in the digital era.
       </p>
-      <img src="https://via.placeholder.com/600x300" alt="About Image" class="mx-auto rounded-2xl shadow-md">
+      <img src="https://via.placeholder.com/600x300" alt="About DSRT" class="mx-auto rounded-2xl shadow-md">
     </div>
   </section>
 
   <!-- Contact -->
-  <section id="contact" class="py-20 bg-gray-50 px-6">
+  <section id="contact" class="relative z-10 py-20 bg-gray-50 px-6">
     <div class="max-w-3xl mx-auto text-center">
-      <h2 class="text-3xl font-bold text-gray-800 mb-4">Contact Us</h2>
+      <h2 class="text-3xl font-bold text-gray-800 mb-4">Contact DSRT</h2>
       <p class="text-gray-600 mb-8">Have questions? Get in touch with us.</p>
       <form class="space-y-4">
         <input type="text" placeholder="Your Name" class="w-full px-4 py-3 rounded-lg border focus:outline-none focus:ring-2 focus:ring-indigo-500" required>
@@ -75,13 +87,15 @@
   </section>
 
   <!-- Footer -->
-  <footer class="bg-gray-900 text-gray-400 py-10 px-6">
-    <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-4 gap-10 text-center md:text-left">
+  <footer class="relative z-10 bg-gray-900 text-gray-400 py-10 px-6">
+    <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-10 text-center md:text-left">
+      
       <!-- Brand -->
       <div>
-        <h3 class="text-white font-bold text-lg mb-4">YourBrand</h3>
-        <p class="text-gray-400 text-sm">Innovating the future, today.</p>
+        <h3 class="text-white font-bold text-lg mb-2">DSRT</h3>
+        <p class="text-gray-400 text-sm">Digital Smart Revise Technology</p>
       </div>
+
       <!-- Navigation -->
       <div>
         <h4 class="text-white font-semibold mb-4">Navigation</h4>
@@ -92,30 +106,81 @@
           <li><a href="#contact" class="hover:text-white">Contact</a></li>
         </ul>
       </div>
-      <!-- Contact -->
-      <div>
-        <h4 class="text-white font-semibold mb-4">Contact</h4>
-        <ul class="space-y-2">
-          <li>Email: info@yourbrand.com</li>
-          <li>Phone: +123 456 789</li>
-          <li>Address: City, Country</li>
-        </ul>
-      </div>
-      <!-- Socials -->
+
+      <!-- Socials (Follow Us Buttons) -->
       <div>
         <h4 class="text-white font-semibold mb-4">Follow Us</h4>
-        <div class="flex justify-center md:justify-start space-x-4">
-          <a href="#" class="text-gray-400 hover:text-white text-xl"><i class="fab fa-facebook"></i></a>
-          <a href="#" class="text-gray-400 hover:text-white text-xl"><i class="fab fa-twitter"></i></a>
-          <a href="#" class="text-gray-400 hover:text-white text-xl"><i class="fab fa-instagram"></i></a>
-          <a href="#" class="text-gray-400 hover:text-white text-xl"><i class="fab fa-linkedin"></i></a>
+        <div class="flex flex-col md:flex-row justify-center md:justify-start gap-4">
+          <!-- Instagram -->
+          <a href="https://www.instagram.com/dsrt.official.2025" 
+             target="_blank" 
+             class="inline-flex items-center justify-center bg-gradient-to-r from-pink-500 to-purple-600 text-white font-semibold px-6 py-3 rounded-full shadow hover:opacity-90 transition">
+             <i class="fab fa-instagram mr-2"></i> Instagram
+          </a>
+          <!-- GitHub -->
+          <a href="https://github.com/mydsrt-artweb/sds" 
+             target="_blank" 
+             class="inline-flex items-center justify-center bg-gradient-to-r from-gray-800 to-black text-white font-semibold px-6 py-3 rounded-full shadow hover:opacity-90 transition">
+             <i class="fab fa-github mr-2"></i> GitHub
+          </a>
         </div>
       </div>
     </div>
     <div class="mt-10 text-center text-gray-500 text-sm">
-      © 2025 YourBrand. All rights reserved.
+      © 2025 DSRT. All rights reserved.
     </div>
   </footer>
 
+  <!-- Background Animation Script -->
+  <script>
+    const canvas = document.getElementById("bgCanvas");
+    const ctx = canvas.getContext("2d");
+    let width, height;
+    function resize() {
+      width = canvas.width = window.innerWidth;
+      height = canvas.height = window.innerHeight;
+    }
+    window.addEventListener("resize", resize);
+    resize();
+
+    const points = Array.from({ length: 60 }, () => ({
+      x: Math.random() * width,
+      y: Math.random() * height,
+      vx: (Math.random() - 0.5) * 1.5,
+      vy: (Math.random() - 0.5) * 1.5
+    }));
+
+    function draw() {
+      ctx.clearRect(0, 0, width, height);
+      for (let i = 0; i < points.length; i++) {
+        const p = points[i];
+        p.x += p.vx;
+        p.y += p.vy;
+        if (p.x < 0 || p.x > width) p.vx *= -1;
+        if (p.y < 0 || p.y > height) p.vy *= -1;
+
+        ctx.beginPath();
+        ctx.arc(p.x, p.y, 2, 0, Math.PI * 2);
+        ctx.fillStyle = "#6366f1"; // Indigo
+        ctx.fill();
+
+        for (let j = i + 1; j < points.length; j++) {
+          const q = points[j];
+          const dx = p.x - q.x;
+          const dy = p.y - q.y;
+          const dist = Math.sqrt(dx * dx + dy * dy);
+          if (dist < 120) {
+            ctx.beginPath();
+            ctx.moveTo(p.x, p.y);
+            ctx.lineTo(q.x, q.y);
+            ctx.strokeStyle = "rgba(99, 102, 241, 0.2)";
+            ctx.stroke();
+          }
+        }
+      }
+      requestAnimationFrame(draw);
+    }
+    draw();
+  </script>
 </body>
 </html>
