--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>DSRT - Digital Smart Revise Technology</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://kit.fontawesome.com/a2e0e6adad.js" crossorigin="anonymous"></script>
   <style>
     body {
       margin: 0;
@@ -23,19 +22,11 @@
       height: 100%;
       z-index: -1;
     }
-
-    /* Hover effects for social buttons */
-    .social-btn i {
+    .social-btn svg {
       transition: transform 0.3s, color 0.3s;
     }
-    .social-btn:hover i {
+    .social-btn:hover svg {
       transform: scale(1.2);
-    }
-    .instagram-btn:hover i {
-      color: #f77737; /* pink/orange Instagram */
-    }
-    .github-btn:hover i {
-      color: #fff; /* white GitHub */
     }
   </style>
 </head>
@@ -95,13 +86,11 @@
   <!-- Footer -->
   <footer class="bg-gray-900 text-center md:text-left px-6 py-12 mt-12">
     <div class="max-w-6xl mx-auto grid md:grid-cols-3 gap-8">
-      <!-- About -->
       <div>
         <h3 class="text-white font-bold text-lg mb-2">DSRT</h3>
         <p class="text-gray-400 text-sm">Digital Smart Revise Technology</p>
       </div>
 
-      <!-- Quick Links -->
       <div>
         <h4 class="text-white font-semibold mb-4">Quick Links</h4>
         <ul class="space-y-2">
@@ -111,19 +100,25 @@
         </ul>
       </div>
 
-      <!-- Follow Us -->
       <div>
         <h4 class="text-white font-semibold mb-4">Follow Us</h4>
         <div class="flex flex-col md:flex-row gap-4 justify-center md:justify-start">
           <!-- Instagram -->
-          <a href="https://www.instagram.com/dsrt.official.2025" target="_blank" 
-             class="social-btn instagram-btn inline-flex items-center justify-center bg-gradient-to-r from-pink-500 to-purple-600 text-white font-semibold px-6 py-3 rounded-full shadow hover:opacity-90 transition">
-             <i class="fab fa-instagram mr-2"></i> Instagram
+          <a href="https://www.instagram.com/dsrt.official.2025" target="_blank"
+             class="social-btn inline-flex items-center justify-center px-6 py-3 rounded-full bg-gradient-to-r from-pink-500 to-purple-600 text-white font-semibold shadow hover:opacity-90 transition">
+            <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 mr-2" viewBox="0 0 24 24" fill="currentColor">
+              <path d="M7.75 2h8.5A5.75 5.75 0 0122 7.75v8.5A5.75 5.75 0 0116.25 22h-8.5A5.75 5.75 0 012 16.25v-8.5A5.75 5.75 0 017.75 2zm0 1.5A4.25 4.25 0 003.5 7.75v8.5A4.25 4.25 0 007.75 20.5h8.5a4.25 4.25 0 004.25-4.25v-8.5A4.25 4.25 0 0016.25 3.5h-8.5zm8.75 2a.75.75 0 110 1.5.75.75 0 010-1.5zM12 7a5 5 0 110 10 5 5 0 010-10zm0 1.5a3.5 3.5 0 100 7 3.5 3.5 0 000-7z"/>
+            </svg>
+            Instagram
           </a>
+
           <!-- GitHub -->
-          <a href="https://github.com/mydsrt-artweb/sds" target="_blank" 
-             class="social-btn github-btn inline-flex items-center justify-center bg-gradient-to-r from-gray-800 to-black text-white font-semibold px-6 py-3 rounded-full shadow hover:opacity-90 transition">
-             <i class="fab fa-github mr-2"></i> GitHub
+          <a href="https://github.com/mydsrt-artweb/sds" target="_blank"
+             class="social-btn inline-flex items-center justify-center px-6 py-3 rounded-full bg-gray-900 text-white font-semibold shadow hover:opacity-90 transition">
+            <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 mr-2" viewBox="0 0 24 24" fill="currentColor">
+              <path d="M12 0C5.37 0 0 5.373 0 12a12 12 0 008.21 11.42c.6.11.82-.26.82-.58v-2.2c-3.34.73-4.04-1.61-4.04-1.61-.55-1.41-1.35-1.79-1.35-1.79-1.1-.75.08-.74.08-.74 1.22.09 1.86 1.26 1.86 1.26 1.08 1.85 2.83 1.31 3.52 1 .11-.77.42-1.31.76-1.61-2.67-.3-5.47-1.34-5.47-5.96 0-1.32.47-2.4 1.24-3.25-.13-.3-.54-1.52.12-3.17 0 0 1.01-.32 3.3 1.23a11.44 11.44 0 016 0c2.28-1.55 3.29-1.23 3.29-1.23.66 1.65.25 2.87.12 3.17.77.85 1.24 1.93 1.24 3.25 0 4.63-2.8 5.65-5.48 5.95.43.37.82 1.1.82 2.22v3.29c0 .32.21.69.83.58A12.01 12.01 0 0024 12c0-6.627-5.373-12-12-12z"/>
+            </svg>
+            GitHub
           </a>
         </div>
       </div>
@@ -165,5 +160,6 @@
       renderer.setSize(window.innerWidth, window.innerHeight);
     });
   </script>
+
 </body>
 </html>
