--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
       height: 100%;
       z-index: -1;
     }
-    .social-btn svg {
+    .social-icon svg {
       transition: transform 0.3s, color 0.3s;
     }
-    .social-btn:hover svg {
+    .social-icon:hover svg {
       transform: scale(1.2);
     }
   </style>
@@ -39,21 +39,10 @@
   <section class="min-h-screen flex flex-col justify-center items-center text-center px-6">
     <h1 class="text-5xl md:text-7xl font-bold mb-4">DSRT</h1>
     <p class="text-xl md:text-2xl mb-6">Digital Smart Revise Technology</p>
-    <a href="#about" class="px-8 py-3 bg-indigo-600 rounded-full shadow hover:bg-indigo-500 transition">Get Started</a>
-  </section>
-
-  <!-- About Section -->
-  <section id="about" class="py-20 px-6 text-center max-w-4xl mx-auto">
-    <h2 class="text-3xl font-bold mb-6">About Us</h2>
-    <p class="text-gray-300">
-      DSRT (Digital Smart Revise Technology) is an innovative platform designed to integrate modern digital 
-      solutions with cutting-edge revision technology. Our mission is to simplify workflows and improve 
-      efficiency for both individuals and businesses.
-    </p>
   </section>
 
   <!-- Features Section -->
-  <section id="features" class="py-20 px-6 bg-gray-800">
+  <section class="py-20 px-6 bg-gray-800">
     <div class="max-w-6xl mx-auto text-center">
       <h2 class="text-3xl font-bold mb-12">Our Features</h2>
       <div class="grid md:grid-cols-3 gap-8">
@@ -76,51 +65,30 @@
     </div>
   </section>
 
-  <!-- Contact Section -->
-  <section id="contact" class="py-20 px-6 text-center max-w-3xl mx-auto">
-    <h2 class="text-3xl font-bold mb-6">Get in Touch</h2>
-    <p class="text-gray-300 mb-6">We’d love to hear from you! Reach out to us for collaborations, questions, or support.</p>
-    <a href="mailto:contact@dsrt.com" class="px-8 py-3 bg-indigo-600 rounded-full shadow hover:bg-indigo-500 transition">Contact Us</a>
-  </section>
-
   <!-- Footer -->
   <footer class="bg-gray-900 text-center md:text-left px-6 py-12 mt-12">
-    <div class="max-w-6xl mx-auto grid md:grid-cols-3 gap-8">
+    <div class="max-w-6xl mx-auto flex flex-col md:flex-row justify-between items-center gap-8">
+      <!-- DSRT -->
       <div>
         <h3 class="text-white font-bold text-lg mb-2">DSRT</h3>
         <p class="text-gray-400 text-sm">Digital Smart Revise Technology</p>
       </div>
 
-      <div>
-        <h4 class="text-white font-semibold mb-4">Quick Links</h4>
-        <ul class="space-y-2">
-          <li><a href="#about" class="text-gray-400 hover:text-white">About</a></li>
-          <li><a href="#features" class="text-gray-400 hover:text-white">Features</a></li>
-          <li><a href="#contact" class="text-gray-400 hover:text-white">Contact</a></li>
-        </ul>
-      </div>
+      <!-- Follow Us Icons Only -->
+      <div class="flex gap-6">
+        <!-- Instagram Icon -->
+        <a href="https://www.instagram.com/dsrt.official.2025" target="_blank" class="social-icon text-white hover:text-pink-500 transition">
+          <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8" viewBox="0 0 24 24" fill="currentColor">
+            <path d="M7.75 2h8.5A5.75 5.75 0 0122 7.75v8.5A5.75 5.75 0 0116.25 22h-8.5A5.75 5.75 0 012 16.25v-8.5A5.75 5.75 0 017.75 2zm0 1.5A4.25 4.25 0 003.5 7.75v8.5A4.25 4.25 0 007.75 20.5h8.5a4.25 4.25 0 004.25-4.25v-8.5A4.25 4.25 0 0016.25 3.5h-8.5zm8.75 2a.75.75 0 110 1.5.75.75 0 010-1.5zM12 7a5 5 0 110 10 5 5 0 010-10zm0 1.5a3.5 3.5 0 100 7 3.5 3.5 0 000-7z"/>
+          </svg>
+        </a>
 
-      <div>
-        <h4 class="text-white font-semibold mb-4">Follow Us</h4>
-        <div class="flex flex-col md:flex-row gap-4 justify-center md:justify-start">
-          <!-- Instagram -->
-          <a href="https://www.instagram.com/dsrt.official.2025" target="_blank"
-             class="social-btn inline-flex items-center justify-center px-6 py-3 rounded-full bg-gradient-to-r from-pink-500 to-purple-600 text-white font-semibold shadow hover:opacity-90 transition">
-            <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 mr-2" viewBox="0 0 24 24" fill="currentColor">
-              <path d="M7.75 2h8.5A5.75 5.75 0 0122 7.75v8.5A5.75 5.75 0 0116.25 22h-8.5A5.75 5.75 0 012 16.25v-8.5A5.75 5.75 0 017.75 2zm0 1.5A4.25 4.25 0 003.5 7.75v8.5A4.25 4.25 0 007.75 20.5h8.5a4.25 4.25 0 004.25-4.25v-8.5A4.25 4.25 0 0016.25 3.5h-8.5zm8.75 2a.75.75 0 110 1.5.75.75 0 010-1.5zM12 7a5 5 0 110 10 5 5 0 010-10zm0 1.5a3.5 3.5 0 100 7 3.5 3.5 0 000-7z"/>
-            </svg>
-            Instagram
-          </a>
-
-          <!-- GitHub -->
-          <a href="https://github.com/mydsrt-artweb/sds" target="_blank"
-             class="social-btn inline-flex items-center justify-center px-6 py-3 rounded-full bg-gray-900 text-white font-semibold shadow hover:opacity-90 transition">
-            <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 mr-2" viewBox="0 0 24 24" fill="currentColor">
-              <path d="M12 0C5.37 0 0 5.373 0 12a12 12 0 008.21 11.42c.6.11.82-.26.82-.58v-2.2c-3.34.73-4.04-1.61-4.04-1.61-.55-1.41-1.35-1.79-1.35-1.79-1.1-.75.08-.74.08-.74 1.22.09 1.86 1.26 1.86 1.26 1.08 1.85 2.83 1.31 3.52 1 .11-.77.42-1.31.76-1.61-2.67-.3-5.47-1.34-5.47-5.96 0-1.32.47-2.4 1.24-3.25-.13-.3-.54-1.52.12-3.17 0 0 1.01-.32 3.3 1.23a11.44 11.44 0 016 0c2.28-1.55 3.29-1.23 3.29-1.23.66 1.65.25 2.87.12 3.17.77.85 1.24 1.93 1.24 3.25 0 4.63-2.8 5.65-5.48 5.95.43.37.82 1.1.82 2.22v3.29c0 .32.21.69.83.58A12.01 12.01 0 0024 12c0-6.627-5.373-12-12-12z"/>
-            </svg>
-            GitHub
-          </a>
-        </div>
+        <!-- GitHub Icon -->
+        <a href="https://github.com/mydsrt-artweb/sds" target="_blank" class="social-icon text-white hover:text-gray-400 transition">
+          <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8" viewBox="0 0 24 24" fill="currentColor">
+            <path d="M12 0C5.37 0 0 5.373 0 12a12 12 0 008.21 11.42c.6.11.82-.26.82-.58v-2.2c-3.34.73-4.04-1.61-4.04-1.61-.55-1.41-1.35-1.79-1.35-1.79-1.1-.75.08-.74.08-.74 1.22.09 1.86 1.26 1.86 1.26 1.08 1.85 2.83 1.31 3.52 1 .11-.77.42-1.31.76-1.61-2.67-.3-5.47-1.34-5.47-5.96 0-1.32.47-2.4 1.24-3.25-.13-.3-.54-1.52.12-3.17 0 0 1.01-.32 3.3 1.23a11.44 11.44 0 016 0c2.28-1.55 3.29-1.23 3.29-1.23.66 1.65.25 2.87.12 3.17.77.85 1.24 1.93 1.24 3.25 0 4.63-2.8 5.65-5.48 5.95.43.37.82 1.1.82 2.22v3.29c0 .32.21.69.83.58A12.01 12.01 0 0024 12c0-6.627-5.373-12-12-12z"/>
+          </svg>
+        </a>
       </div>
     </div>
 
