--- a/index.html
+++ b/index.html
@@ -36,9 +36,15 @@
   <canvas id="bg"></canvas>
 
   <!-- Hero Section -->
-  <section class="min-h-screen flex flex-col justify-center items-center text-center px-6">
-    <h1 class="text-5xl md:text-7xl font-bold mb-4">DSRT</h1>
-    <p class="text-xl md:text-2xl mb-6">Digital Smart Revise Technology</p>
+  <section class="min-h-screen flex flex-col justify-center items-center text-center px-6 py-20">
+    <h1 class="text-5xl md:text-7xl font-bold mb-6">DSRT</h1>
+    <p class="text-xl md:text-2xl mb-8">Digital Smart Revise Technology</p>
+    <p class="text-gray-300 max-w-3xl text-center text-lg md:text-xl leading-relaxed">
+      DSRT is a cutting-edge digital platform designed to revolutionize the way individuals and businesses 
+      approach learning, revision, and workflow optimization. By integrating advanced AI-driven tools 
+      with a user-friendly interface, DSRT ensures that your tasks are performed efficiently, 
+      securely, and intelligently, delivering measurable productivity gains and seamless digital experiences.
+    </p>
   </section>
 
   <!-- Features Section -->
