--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <canvas id="bg"></canvas>
 
   <!-- Navbar / Logo + Login -->
-  <header class="fixed top-0 left-0 w-full px-6 py-4 z-50 flex justify-between items-center bg-transparent">
+  <header class="fixed top-0 left-0 w-full px-6 py-4 flex justify-between items-center bg-gradient-to-b from-gray-900/80 to-transparent z-50">
     <!-- Logo kiri -->
     <img src="logo.png" alt="DSRT Logo" class="h-16 md:h-20">
 
@@ -60,7 +60,7 @@
   </div>
 
   <!-- Hero Section -->
-  <section class="min-h-screen flex flex-col justify-center items-center text-center px-6 py-20">
+  <section class="min-h-screen flex flex-col justify-center items-center text-center px-6 pt-28 pb-20">
     <h1 class="text-5xl md:text-7xl font-bold mb-6">DSRT</h1>
     <p class="text-xl md:text-2xl mb-8">Digital Smart Revise Technology</p>
     <p class="text-gray-300 max-w-3xl text-center text-lg md:text-xl leading-relaxed mb-8">
