--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
   <!-- Navbar / Logo + Login -->
   <header class="w-full px-6 py-6 flex justify-between items-center bg-gradient-to-b from-gray-900/80 to-transparent">
-    <img src="logo.png" alt="DSRT Logo" class="h-16 md:h-20">
+    <img src="erasebg-transformed.png" alt="DSRT Logo" class="h-16 md:h-20">
     <button id="loginBtn" class="px-6 py-2 bg-indigo-600 hover:bg-indigo-500 text-white font-semibold rounded-full shadow-lg transition">Login</button>
   </header>
 
