--- a/index.html
+++ b/index.html
@@ -91,6 +91,48 @@
     </div>
   </section>
 
+  <!-- Modern Icons Section -->
+  <section class="py-12 bg-gray-800">
+    <div class="max-w-6xl mx-auto text-center">
+      <h3 class="text-2xl font-bold mb-8">Powered By</h3>
+      <div class="flex flex-col items-center gap-8">
+
+        <!-- AI -->
+        <div class="flex flex-col items-center text-indigo-400 hover:scale-110 transition">
+          <svg xmlns="http://www.w3.org/2000/svg" class="w-14 h-14 mb-2 text-indigo-400" fill="currentColor" viewBox="0 0 24 24">
+            <path d="M12 2L15 8H9L12 2zM2 12L8 15V9L2 12zM12 22l-3-6h6l-3 6zM22 12l-6 3V9l6 3z"/>
+          </svg>
+          <p class="text-sm text-white">AI</p>
+        </div>
+
+        <!-- Cloud -->
+        <div class="flex flex-col items-center text-blue-400 hover:scale-110 transition">
+          <svg xmlns="http://www.w3.org/2000/svg" class="w-14 h-14 mb-2 text-blue-400" fill="currentColor" viewBox="0 0 24 24">
+            <path d="M19 18H6a4 4 0 010-8h.26A6.5 6.5 0 0118 9.5h1a4.5 4.5 0 010 9z"/>
+          </svg>
+          <p class="text-sm text-white">Cloud</p>
+        </div>
+
+        <!-- Mobile -->
+        <div class="flex flex-col items-center text-green-400 hover:scale-110 transition">
+          <svg xmlns="http://www.w3.org/2000/svg" class="w-14 h-14 mb-2 text-green-400" fill="currentColor" viewBox="0 0 24 24">
+            <path d="M7 2h10a2 2 0 012 2v16a2 2 0 01-2 2H7a2 2 0 01-2-2V4a2 2 0 012-2z"/>
+          </svg>
+          <p class="text-sm text-white">Mobile</p>
+        </div>
+
+        <!-- Security -->
+        <div class="flex flex-col items-center text-yellow-400 hover:scale-110 transition">
+          <svg xmlns="http://www.w3.org/2000/svg" class="w-14 h-14 mb-2 text-yellow-400" fill="currentColor" viewBox="0 0 24 24">
+            <path d="M12 1l8 4v6c0 5.25-3.5 10-8 11-4.5-1-8-5.75-8-11V5l8-4z"/>
+          </svg>
+          <p class="text-sm text-white">Security</p>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
   <!-- Footer -->
   <footer class="bg-gray-900 text-center md:text-left px-6 py-12 mt-12">
     <div class="max-w-6xl mx-auto flex flex-col md:flex-row justify-between items-center gap-8">
